# BirdEyeView

./: CMakeLists.txt  README.md  main.cu
Relazione/: .~lock.Relazione.docx#  Cartel1.xlsx  Presentazione.pptx  Relazione.docx  Relazione.odt  Relazione_nuova.odt  schema_hpc  tempi_jetson.xlsx  tempi_portatile.xlsx  tempistiche.ods  ~$lazione.docx
Relazione/Old_Version/: Cartel1.xlsx  Diagramma non titolato.drawio  Relazione.docx  lu876440ewl3.tmp  lu876440ewlx.tmp  lu876440ewnc.tmp  ~$lazione.docx
Relazione/statistiche/: Senza nome 1.ods  TEMPI_CUDA_OPT_JETSON.txt  TEMPI_MAT_MUL_OPENCV.txt  tempi_portatile.xlsx
example/: esempio_gpumat.txt  main.cpp
example/BirdsEyeView/: CMakeLists.txt
example/BirdsEyeView/cestino/: birds-eye-view-photo.cpp
example/BirdsEyeView_CUDA/: birds-eye-view.cpp
example/IPM/: leggimi.txt
example/Opencv_cuda_mat_passing/: CMakeLists.txt  main.cu
example/matrixMul/: leggimi.txt  main.cu
example/video_reader/: CMakeLists.txt  video_reader.cpp
lib/: utilities.h
src/: cuda_remapping.cu  cuda_remapping.txt  main.cu  utilities.cu
